plugins {
    id 'fabric-loom' version '1.14-SNAPSHOT'
    id 'maven-publish'
}

version = project.mod_version
group = project.maven_group

base {
    archivesName = project.archives_base_name
}

repositories {
    // === КИТАЙСКИЕ ЗЕРКАЛА (ставятся ПЕРВЫМИ) ===
    maven {
        name = "Aliyun"
        url = "https://maven.aliyun.com/repository/public"
    }
    maven {
        name = "Tencent"
        url = "https://mirrors.tencent.com/nexus/repository/maven-public/"
    }

    // === ОФИЦИАЛЬНЫЕ РЕПОЗИТОРИИ ===
    maven {
        name = "Fabric"
        url = "https://maven.fabricmc.net/"
    }
    maven {
        name = "Mojang"
        url = "https://libraries.minecraft.net/"
    }
    maven {
        name = "CurseMaven"
        url = "https://cursemaven.com"
    }
    maven {
        name = "Modrinth"
        url = "https://api.modrinth.com/maven"
        content {
            includeGroup "maven.modrinth"
        }
    }
    mavenCentral()
    mavenLocal()
}

dependencies {
    minecraft "com.mojang:minecraft:${project.minecraft_version}"
    mappings loom.officialMojangMappings()
    modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
    modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_api_version}"

    // === ВНЕШНИЕ МОДЫ ===
    // Раскомментируйте и замените ID на актуальные для 1.21.11

    // Пример: Decent Freelook
    // modImplementation "curse.maven:decent-freelook-1458133:7612834"

    // Пример: Freelook с Modrinth
    // modImplementation "maven.modrinth:freelook:1.1.0+1.21.11"
}

processResources {
    inputs.property "version", project.version

    filesMatching("fabric.mod.json") {
        expand "version": project.version
    }
}

tasks.withType(JavaCompile).configureEach {
    it.options.release = 21
}

java {
    withSourcesJar()

    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}

jar {
    from("LICENSE") {
        rename { "${it}_${project.archives_base_name}" }
    }
}

publishing {
    publications {
        create("mavenJava", MavenPublication) {
            from components.java
        }
    }

    repositories {
        // Репозитории для публикации
    }
}